--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -44,7 +44,7 @@
                                 class="color2">dans l’Espérance…</span>
                     </h4>
 
-                    <img src="{{ asset('images/accueil/afadec_noel2019.jpg') }}" />
+                    <img style="max-width: 100%;" src="{{ asset('images/accueil/afadec_noel2019.jpg') }}" />
 
                     <!--<iframe class="" width="100%" height="430" frameborder="0" allowfullscreen=""
                             mozallowfullscreen="" webkitallowfullscreen=""
