--- a/app/Resources/views/ressources/oneDevoirEns.html.twig
+++ b/app/Resources/views/ressources/oneDevoirEns.html.twig
@@ -374,7 +374,7 @@
                             <th>Nouvel upload</th>
 
                             {% if app.user.hasRole('ROLE_SUPER_ADMIN') %}
-                                <th>Action</th>
+                                <!--<th>Action</th>-->
                             {% endif %}
 
                         </tr>
@@ -461,7 +461,7 @@
                                         </div>
                                     </td>
                                     {% if app.user.hasRole('ROLE_SUPER_ADMIN') %}
-                                        <td><a class="btn btnDeleteCopie btn-alert btn-sm">Supprimer</a></td>
+                                        <!--<td><a class="btn btnDeleteCopie btn-alert btn-sm">Supprimer</a></td>-->
                                     {% endif %}
                                 </tr>
                             {% endif %}
