--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -37,12 +37,12 @@
                 {% if template == 'studit' %}
                     <img src="{{ asset('educomp/images/logoSTUDIT.png') }}" alt="">
                 {% elseif template == 'afadec' %}
-                    <!--<h4 class="heading pt-20 text-center mb-0">DÉCOUVREZ L’AFADEC <span
+                    <h4 class="heading pt-20 text-center mb-0">DÉCOUVREZ L’AFADEC <span
                                 class="color2">EN 2 MINUTES</span>
-                    </h4>-->
-                    <h4 class="heading pt-20 text-center mb-0">Une entrée dans la nouvelle année <span
-                                class="color2">dans l’Espérance…</span>
                     </h4>
+                    <!--<h4 class="heading pt-20 text-center mb-0">Une entrée dans la nouvelle année <span
+                                class="color2">dans l’Espérance…</span>
+                    </h4>-->
 
                     <!--<img style="max-width: 100%;" src="{{ asset('images/accueil/afadec_noel2019.jpg') }}" />-->
 
