--- a/app/Resources/views/ressources/oneDevoir.html.twig
+++ b/app/Resources/views/ressources/oneDevoir.html.twig
@@ -62,6 +62,7 @@
                         <th>Prénom</th>
                         <th>Nom</th>
                         <th>Copie rendue</th>
+                        <th>Date de dépôt</th>
                         <th>Correcteur associé</th>
                         <th>Note</th>
                         <th class="filter-select">Institut</th>
@@ -76,6 +77,7 @@
                             <td>{{ copie.user.firstname }}</td>
                             <td>{{ copie.user.lastname }}</td>
                             <td>{{ copie.fichierCopie }}</td>
+                            <td>{{ copie.copie.dateCreation|localizeddate('none', 'none', 'fr', null, 'dd/MM/Y à H:mm' ) }}</td>
                             <td>
                                 {% if copie.copie.assocCorrecteur %}
                                     Le {{ copie.copie.assocCorrecteur.createdAt|localizeddate('none', 'none', 'fr', null, 'dd/MM/Y à H:mm' ) }} par {{ copie.copie.assocCorrecteur.correcteur }}
